turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:12: error: type mismatch;
 found   : Unit
 required: Int
			state=nextState(state, c, rule);
                                       ^Turmite:14: error: value c is not a member of Unit
possible cause: maybe a semicolon is missing before `value c'?
		} c=c+1
                  ^