turmites.lessons.turmites.helloturmite.HelloTurmite.scala.code
var state=0

def step(colors:Array[Color], rule:Array[Array[Array[Int]]] ) {
	var c=0
	c=0
	while (c<colors.length) {
		if (getCouleurSol()==colors(c)) {
			nextColor(state, c, colors, rule);
			nextMove(state, c, rule);
			state=nextState(state, c, rule);
			c=colors.length
		} c=c+1
	}
}

def setCouleurSol(c:Color) {
	setCouleurBrosse(c);
	baisseBrosse();
	leveBrosse();
	}
	
def nextColor(state:Int, c:Int, colors:Array[Color], rule:Array[Array[Array[Int]]]) {
	var a=0
	a=rule(state)(c)(0)
	setCouleurSol(colors(a))
}
	
def nextMove(state:Int, c:Int, rule:Array[Array[Array[Int]]]) {
	rule(state)(c)(1) match {
		case 0 => 
		case 1 => avance();
		case 2 => gauche(); avance();
		case 4 => retourne(); avance();
		case 8 => droite(); avance();
	}
}
	
def nextState(state:Int, c:Int, rule:Array[Array[Array[Int]]]) {
	var b=0
	b=rule(state)(c)(2)
	return b
}